--- a/src/Presentation/CTM.Win/CTM.Win.csproj
+++ b/src/Presentation/CTM.Win/CTM.Win.csproj
@@ -163,10 +163,10 @@
     <Compile Include="BaseForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\Accounting\AccountManage\FrmAccountMonthlyInit.cs">
+    <Compile Include="Forms\Accounting\MonthlyProcess\FrmAccountMonthlyInit.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\Accounting\AccountManage\FrmAccountMonthlyInit.Designer.cs">
+    <Compile Include="Forms\Accounting\MonthlyProcess\FrmAccountMonthlyInit.Designer.cs">
       <DependentUpon>FrmAccountMonthlyInit.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Accounting\DataManage\_dialogTradeDataContrast.cs">
@@ -315,22 +315,22 @@
     <Compile Include="Models\StockPositionModel.cs" />
     <Compile Include="Models\StockInfoModel.cs" />
     <Compile Include="Models\TradeRecordModel.cs" />
-    <Compile Include="Forms\Accounting\AccountManage\FrmAccountFundMonthlyStatements.cs">
+    <Compile Include="Forms\Accounting\MonthlyProcess\FrmAccountFundMonthlyStatements.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\Accounting\AccountManage\FrmAccountFundMonthlyStatements.Designer.cs">
+    <Compile Include="Forms\Accounting\MonthlyProcess\FrmAccountFundMonthlyStatements.Designer.cs">
       <DependentUpon>FrmAccountFundMonthlyStatements.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\Accounting\AccountManage\FrmAccountFundTransfer.cs">
+    <Compile Include="Forms\Accounting\MonthlyProcess\FrmAccountFundTransfer.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\Accounting\AccountManage\FrmAccountFundTransfer.Designer.cs">
+    <Compile Include="Forms\Accounting\MonthlyProcess\FrmAccountFundTransfer.Designer.cs">
       <DependentUpon>FrmAccountFundTransfer.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\Accounting\AccountManage\_dialogAccountFundTransfer.cs">
+    <Compile Include="Forms\Accounting\MonthlyProcess\_dialogAccountFundTransfer.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\Accounting\AccountManage\_dialogAccountFundTransfer.Designer.cs">
+    <Compile Include="Forms\Accounting\MonthlyProcess\_dialogAccountFundTransfer.Designer.cs">
       <DependentUpon>_dialogAccountFundTransfer.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Accounting\DataManage\FrmDeliveryManage.cs">
@@ -691,7 +691,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="stocks.ico" />
-    <EmbeddedResource Include="Forms\Accounting\AccountManage\FrmAccountMonthlyInit.resx">
+    <EmbeddedResource Include="Forms\Accounting\MonthlyProcess\FrmAccountMonthlyInit.resx">
       <DependentUpon>FrmAccountMonthlyInit.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Accounting\DataManage\_dialogTradeDataContrast.resx">
@@ -757,13 +757,13 @@
     <EmbeddedResource Include="Forms\InvestmentDecision\_dialogMTFEdit.resx">
       <DependentUpon>_dialogMTFEdit.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\Accounting\AccountManage\FrmAccountFundMonthlyStatements.resx">
+    <EmbeddedResource Include="Forms\Accounting\MonthlyProcess\FrmAccountFundMonthlyStatements.resx">
       <DependentUpon>FrmAccountFundMonthlyStatements.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\Accounting\AccountManage\FrmAccountFundTransfer.resx">
+    <EmbeddedResource Include="Forms\Accounting\MonthlyProcess\FrmAccountFundTransfer.resx">
       <DependentUpon>FrmAccountFundTransfer.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\Accounting\AccountManage\_dialogAccountFundTransfer.resx">
+    <EmbeddedResource Include="Forms\Accounting\MonthlyProcess\_dialogAccountFundTransfer.resx">
       <DependentUpon>_dialogAccountFundTransfer.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Accounting\DataManage\FrmDeliveryManage.resx">
