--- a/src/Presentation/CTM.Win/CTM.Win.csproj
+++ b/src/Presentation/CTM.Win/CTM.Win.csproj
@@ -163,6 +163,12 @@
     <Compile Include="BaseForm.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Forms\Accounting\MonthlyProcess\FrmAccountInitVerify.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Accounting\MonthlyProcess\FrmAccountInitVerify.Designer.cs">
+      <DependentUpon>FrmAccountInitVerify.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Accounting\MonthlyProcess\FrmAccountMonthlyInit.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -691,6 +697,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="stocks.ico" />
+    <EmbeddedResource Include="Forms\Accounting\MonthlyProcess\FrmAccountInitVerify.resx">
+      <DependentUpon>FrmAccountInitVerify.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Accounting\MonthlyProcess\FrmAccountMonthlyInit.resx">
       <DependentUpon>FrmAccountMonthlyInit.cs</DependentUpon>
     </EmbeddedResource>
