Add Monthly Statement Entities

--- a/src/Libraries/CTM.Core/CTM.Core.csproj
+++ b/src/Libraries/CTM.Core/CTM.Core.csproj
@@ -91,6 +91,10 @@
     <Compile Include="Domain\InvestmentDecision\PositionStockAnalysisInfo.cs" />
     <Compile Include="Domain\MonthlyStatement\MIAccountFund.cs" />
     <Compile Include="Domain\MonthlyStatement\MIAccountPosition.cs" />
+    <Compile Include="Domain\MonthlyStatement\MSAccountPosition.cs" />
+    <Compile Include="Domain\MonthlyStatement\MSAccountFund.cs" />
+    <Compile Include="Domain\MonthlyStatement\MSInvestorProfit.cs" />
+    <Compile Include="Domain\MonthlyStatement\MSProfitDetail.cs" />
     <Compile Include="Util\AppConfigHelper.cs" />
     <Compile Include="BaseEntity.cs" />
     <Compile Include="Util\CommonHelper.cs" />
