--- a/src/Libraries/CTM.Data/CTM.Data.csproj
+++ b/src/Libraries/CTM.Data/CTM.Data.csproj
@@ -88,7 +88,9 @@
     <Compile Include="Mapping\InvestmentDecision\MarketTrendForecastInfoMap.cs" />
     <Compile Include="Mapping\Log\LoginLogMap.cs" />
     <Compile Include="Mapping\MarginTrading\MarginTradingInfoMap.cs" />
+    <Compile Include="Mapping\MonthlyStatement\MSAccountFundMap.cs" />
     <Compile Include="Mapping\MonthlyStatement\MIAccountFundMap.cs" />
+    <Compile Include="Mapping\MonthlyStatement\MSAccountPositionMap.cs" />
     <Compile Include="Mapping\MonthlyStatement\MIAccountPositionMap.cs" />
     <Compile Include="Mapping\Stock\StockPoolLogMap.cs" />
     <Compile Include="Mapping\Stock\StockTransferInfoMap.cs" />
