--- a/src/Libraries/CTM.Data/CTM.Data.csproj
+++ b/src/Libraries/CTM.Data/CTM.Data.csproj
@@ -261,6 +261,10 @@
     <Compile Include="Migrations\201702220759320_037.Designer.cs">
       <DependentUpon>201702220759320_037.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201702240643111_038.cs" />
+    <Compile Include="Migrations\201702240643111_038.Designer.cs">
+      <DependentUpon>201702240643111_038.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlHelper.cs" />
@@ -389,6 +393,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201702220759320_037.resx">
       <DependentUpon>201702220759320_037.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201702240643111_038.resx">
+      <DependentUpon>201702240643111_038.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
