--- a/src/Presentation/CTM.Win/CTM.Win.csproj
+++ b/src/Presentation/CTM.Win/CTM.Win.csproj
@@ -31,7 +31,7 @@
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
     <OpenBrowserOnPublish>false</OpenBrowserOnPublish>
-    <ApplicationRevision>24</ApplicationRevision>
+    <ApplicationRevision>25</ApplicationRevision>
     <ApplicationVersion>1.2.1.%2a</ApplicationVersion>
     <UseApplicationTrust>true</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
@@ -666,7 +666,7 @@
     <Compile Include="Util\DataSourceHelper.cs" />
     <Compile Include="Util\NetHelper.cs" />
     <Compile Include="Util\IniConfigHelper.cs" />
-    <Content Include="App_Data\Install\DBMigration_037.sql" />
+    <Content Include="App_Data\Install\DBMigration_038.sql" />
     <Content Include="App_Data\Install\SqlServer.Views.sql" />
     <Content Include="App_Data\Install\DBMigration_036.sql" />
     <Content Include="External\DailyTradeIdentification\Client.exe">
@@ -901,7 +901,6 @@
     <EmbeddedResource Include="Forms\FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -1230,6 +1229,16 @@
   </ItemGroup>
   <ItemGroup>
     <PublishFile Include="App_Data\Install\DBMigration_036.sql">
+      <Visible>False</Visible>
+      <Group>
+      </Group>
+      <TargetPath>
+      </TargetPath>
+      <PublishState>Exclude</PublishState>
+      <IncludeHash>True</IncludeHash>
+      <FileType>File</FileType>
+    </PublishFile>
+    <PublishFile Include="App_Data\Install\DBMigration_038.sql">
       <Visible>False</Visible>
       <Group>
       </Group>
