Modify Entity and Map

--- a/src/Libraries/CTM.Core/CTM.Core.csproj
+++ b/src/Libraries/CTM.Core/CTM.Core.csproj
@@ -91,10 +91,14 @@
     <Compile Include="Domain\InvestmentDecision\PositionStockAnalysisInfo.cs" />
     <Compile Include="Domain\MonthlyStatement\MIAccountFund.cs" />
     <Compile Include="Domain\MonthlyStatement\MIAccountPosition.cs" />
-    <Compile Include="Domain\MonthlyStatement\MSAccountPosition.cs" />
-    <Compile Include="Domain\MonthlyStatement\MSAccountFund.cs" />
-    <Compile Include="Domain\MonthlyStatement\MSInvestorProfit.cs" />
-    <Compile Include="Domain\MonthlyStatement\MSProfitDetail.cs" />
+    <Compile Include="Domain\MonthlyStatement\DSDailyDetail.cs" />
+    <Compile Include="Domain\MonthlyStatement\DSDailyInvestor.cs" />
+    <Compile Include="Domain\MonthlyStatement\DSDeliveryAccount.cs" />
+    <Compile Include="Domain\MonthlyStatement\DSDeliveryDetail.cs" />
+    <Compile Include="Domain\MonthlyStatement\MSDeliveryDetail.cs" />
+    <Compile Include="Domain\MonthlyStatement\MSDeliveryAccount.cs" />
+    <Compile Include="Domain\MonthlyStatement\MSDailyInvestor.cs" />
+    <Compile Include="Domain\MonthlyStatement\MSDailyDetail.cs" />
     <Compile Include="Util\AppConfigHelper.cs" />
     <Compile Include="BaseEntity.cs" />
     <Compile Include="Util\CommonHelper.cs" />
