--- a/src/Libraries/CTM.Data/CTM.Data.csproj
+++ b/src/Libraries/CTM.Data/CTM.Data.csproj
@@ -265,6 +265,10 @@
     <Compile Include="Migrations\201703200231229_037.Designer.cs">
       <DependentUpon>201703200231229_037.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201703200343464_038.cs" />
+    <Compile Include="Migrations\201703200343464_038.Designer.cs">
+      <DependentUpon>201703200343464_038.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlHelper.cs" />
@@ -393,6 +397,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201703200231229_037.resx">
       <DependentUpon>201703200231229_037.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703200343464_038.resx">
+      <DependentUpon>201703200343464_038.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
