--- a/src/Libraries/CTM.Data/CTM.Data.csproj
+++ b/src/Libraries/CTM.Data/CTM.Data.csproj
@@ -117,6 +117,10 @@
     <Compile Include="Migrations\201703200518088_Initial.Designer.cs">
       <DependentUpon>201703200518088_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201703220337599_001.cs" />
+    <Compile Include="Migrations\201703220337599_001.Designer.cs">
+      <DependentUpon>201703220337599_001.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlHelper.cs" />
@@ -134,6 +138,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201703200518088_Initial.resx">
       <DependentUpon>201703200518088_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703220337599_001.resx">
+      <DependentUpon>201703220337599_001.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
