--- a/src/Libraries/CTM.Data/CTM.Data.csproj
+++ b/src/Libraries/CTM.Data/CTM.Data.csproj
@@ -121,6 +121,10 @@
     <Compile Include="Migrations\201703220337599_001.Designer.cs">
       <DependentUpon>201703220337599_001.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201703270537086_002.cs" />
+    <Compile Include="Migrations\201703270537086_002.Designer.cs">
+      <DependentUpon>201703270537086_002.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlHelper.cs" />
@@ -141,6 +145,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201703220337599_001.resx">
       <DependentUpon>201703220337599_001.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703270537086_002.resx">
+      <DependentUpon>201703270537086_002.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
