--- a/src/Presentation/CTM.Win/CTM.Win.csproj
+++ b/src/Presentation/CTM.Win/CTM.Win.csproj
@@ -181,6 +181,18 @@
     <Compile Include="Forms\Accounting\DataManage\_dialogTradeDataContrast.Designer.cs">
       <DependentUpon>_dialogTradeDataContrast.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Accounting\MonthlyStatement\_dialogAccountProfitAdjust.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Accounting\MonthlyStatement\_dialogAccountProfitAdjust.Designer.cs">
+      <DependentUpon>_dialogAccountProfitAdjust.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Accounting\MonthlyStatement\_dialogStockProfitAdjust.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Accounting\MonthlyStatement\_dialogStockProfitAdjust.Designer.cs">
+      <DependentUpon>_dialogStockProfitAdjust.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Accounting\StatisticsReport\FrmAccountPositionConfiguration.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -899,6 +911,7 @@
     <EmbeddedResource Include="Forms\FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
