--- a/src/Presentation/CTM.Win/CTM.Win.csproj
+++ b/src/Presentation/CTM.Win/CTM.Win.csproj
@@ -245,7 +245,7 @@
     <Compile Include="Forms\DailyTrading\TradeIdentifier\FrmKLineTradeIdentifier.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\DailyTrading\TradeIdentifier\FrmUserTradeIdentifier.Designer.cs">
+    <Compile Include="Forms\DailyTrading\TradeIdentifier\FrmKLineTradeIdentifier.Designer.cs">
       <DependentUpon>FrmKLineTradeIdentifier.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\DailyTrading\TradeIdentifier\FrmTimeSharingTradeIdentifier.cs">
@@ -759,7 +759,7 @@
     <EmbeddedResource Include="Forms\DailyTrading\StatisticsReport\FrmStockPositionQuery.resx">
       <DependentUpon>FrmStockPositionQuery.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\DailyTrading\TradeIdentifier\FrmUserTradeIdentifier.resx">
+    <EmbeddedResource Include="Forms\DailyTrading\TradeIdentifier\FrmKLineTradeIdentifier.resx">
       <DependentUpon>FrmKLineTradeIdentifier.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\DailyTrading\TradeIdentifier\FrmTimeSharingTradeIdentifier.resx">
