--- a/src/Presentation/CTM.Win/app.config
+++ b/src/Presentation/CTM.Win/app.config
@@ -42,9 +42,8 @@
     <add key="MarginTradingAPR" value="0.08" />
     <!-- 利息年核算天数 -->
     <add key="YearlyAccountingDayNumber" value="360" />
-    <!-- 交易记录历史查询月数 -->
-    <add key="TradeRecordHistoryQueryMonth" value="1" />
-    <add key="ClientSettingsProvider.ServiceUri" value="" />
+   <!-- 交易类别收益报表导出模板文件名 -->
+    <add key="TradeTypeProfitTemplate" value="TradeTypeProfit.xlsx"/> 
   </appSettings>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
