--- a/src/Presentation/CTM.Win/app.config
+++ b/src/Presentation/CTM.Win/app.config
@@ -43,7 +43,9 @@
     <!-- 利息年核算天数 -->
     <add key="YearlyAccountingDayNumber" value="360" />
    <!-- 交易类别收益报表导出模板文件名 -->
-    <add key="TradeTypeProfitTemplate" value="TradeTypeProfit.xltx"/> 
+    <add key="TradeTypeProfitTemplate" value="TradeTypeProfit.xltx"/>
+    <!-- 隔日短差收益报表导出模板文件名 -->
+    <add key="MultiDayProfitTemplate" value="MultiDayProfit.xltx"/>
   </appSettings>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
