--- a/src/Presentation/CTM.Win/CTM.Win.csproj
+++ b/src/Presentation/CTM.Win/CTM.Win.csproj
@@ -272,6 +272,12 @@
     <Compile Include="Forms\DailyTrading\TradeIdentifier\FrmTimeSharingTradeIdentifier.Designer.cs">
       <DependentUpon>FrmTimeSharingTradeIdentifier.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\InvestorStudio\FrmInvestorStudio.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\InvestorStudio\FrmInvestorStudio.Designer.cs">
+      <DependentUpon>FrmInvestorStudio.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\InvestmentDecision\FrmInvestmentPlanRecord.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -792,6 +798,9 @@
     <EmbeddedResource Include="Forms\DailyTrading\TradeIdentifier\FrmTimeSharingTradeIdentifier.resx">
       <DependentUpon>FrmTimeSharingTradeIdentifier.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\InvestorStudio\FrmInvestorStudio.resx">
+      <DependentUpon>FrmInvestorStudio.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\InvestmentDecision\FrmInvestmentPlanRecord.resx">
       <DependentUpon>FrmInvestmentPlanRecord.cs</DependentUpon>
     </EmbeddedResource>
@@ -966,6 +975,7 @@
     <EmbeddedResource Include="Forms\FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
