--- a/src/Presentation/CTM.Win/CTM.Win.csproj
+++ b/src/Presentation/CTM.Win/CTM.Win.csproj
@@ -31,7 +31,7 @@
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
     <OpenBrowserOnPublish>false</OpenBrowserOnPublish>
-    <ApplicationRevision>17</ApplicationRevision>
+    <ApplicationRevision>19</ApplicationRevision>
     <ApplicationVersion>1.2.3.%2a</ApplicationVersion>
     <UseApplicationTrust>true</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
@@ -164,6 +164,12 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Extensions\GraphicsExtensions.cs" />
+    <Compile Include="Forms\Accounting\DataManage\_dialogAmountSplit.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Accounting\DataManage\_dialogAmountSplit.Designer.cs">
+      <DependentUpon>_dialogAmountSplit.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Accounting\MonthlyStatement\FrmAccountInitVerify.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -750,6 +756,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="stocks.ico" />
+    <EmbeddedResource Include="Forms\Accounting\DataManage\_dialogAmountSplit.resx">
+      <DependentUpon>_dialogAmountSplit.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Accounting\MonthlyStatement\FrmAccountInitVerify.resx">
       <DependentUpon>FrmAccountInitVerify.cs</DependentUpon>
     </EmbeddedResource>
