--- a/src/Presentation/CTM.Win/app.config
+++ b/src/Presentation/CTM.Win/app.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
@@ -18,8 +18,9 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="CTMContext" connectionString="Server=10.10.10.2\zb; DataBase=CTMDB; uid=sa;pwd=Nc@3102;" providerName="System.Data.SqlClient" />
-    <!--<add name="CTMContext" connectionString="Server=10.10.16.66\RGServer; DataBase=CTMDB; uid=sa;pwd=sa123;" providerName="System.Data.SqlClient" />-->
+    <add name="CTMContext" connectionString="Server=10.10.10.2\zb; DataBase=CTMDB; uid=sa;pwd=Nc@3102;"
+      providerName="System.Data.SqlClient" />
+    <add name="localhost_CTMDB_Connection" connectionString="XpoProvider=MSSqlServer;data source=localhost;integrated security=SSPI;initial catalog=CTMDB" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
