--- a/src/Presentation/CTM.Win/app.config
+++ b/src/Presentation/CTM.Win/app.config
@@ -18,8 +18,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="CTMContext" connectionString="Server=10.10.10.2\zb; DataBase=CTMDB; uid=sa;pwd=Nc@3102;"
-      providerName="System.Data.SqlClient" />
+    <add name="CTMContext" connectionString="Server=10.10.10.2\zb; DataBase=CTMDB; uid=sa;pwd=Nc@3102;" providerName="System.Data.SqlClient" />
     <add name="localhost_CTMDB_Connection" connectionString="XpoProvider=MSSqlServer;data source=localhost;integrated security=SSPI;initial catalog=CTMDB" />
   </connectionStrings>
   <runtime>
@@ -43,10 +42,11 @@
     <add key="MarginTradingAPR" value="0.08" />
     <!-- 利息年核算天数 -->
     <add key="YearlyAccountingDayNumber" value="360" />
-   <!-- 交易类别收益报表导出模板文件名 -->
-    <add key="TradeTypeProfitTemplate" value="TradeTypeProfit.xltx"/>
+    <!-- 交易类别收益报表导出模板文件名 -->
+    <add key="TradeTypeProfitTemplate" value="TradeTypeProfit.xltx" />
     <!-- 隔日短差收益报表导出模板文件名 -->
-    <add key="MultiDayProfitTemplate" value="MultiDayProfit.xltx"/>
+    <add key="MultiDayProfitTemplate" value="MultiDayProfit.xltx" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
