--- a/src/Presentation/CTM.Win/app.config
+++ b/src/Presentation/CTM.Win/app.config
@@ -18,8 +18,8 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <!--<add name="CTMContext" connectionString="Server=10.10.10.2\zb; DataBase=CTMDB; uid=sa;pwd=Nc@3102;" providerName="System.Data.SqlClient" />-->
-    <add name="CTMContext" connectionString="Server=localhost\RGSERVER; DataBase=CTMDB; uid=sa;pwd=sa123;" providerName="System.Data.SqlClient" />
+    <add name="CTMContext" connectionString="Server=10.10.10.2\zb; DataBase=CTMDB; uid=sa;pwd=Nc@3102;" providerName="System.Data.SqlClient" />
+    <!--<add name="CTMContext" connectionString="Server=localhost\RGSERVER; DataBase=CTMDB; uid=sa;pwd=sa123;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
